docs/docs/versions/0.5.1/_sources/index.rst.txt
.. SmartSim documentation master file, created by
   sphinx-quickstart on Sat Sep 14 15:07:14 2019.

.. toctree::
   :maxdepth: 1

   versions

.. toctree::
   :maxdepth: 3
   :caption: Getting Started

   overview
   installation_instructions/basic
   installation_instructions/platform
   contributing
   smartsim_zoo

.. toctree::
   :maxdepth: 2
   :caption: Tutorials

   tutorials/getting_started/getting_started
   tutorials/online_analysis/lattice/online_analysis
   tutorials/ml_inference/Inference-in-SmartSim
   tutorials/ml_training/surrogate/train_surrogate

.. toctree::
   :maxdepth: 2
   :caption: SmartSim

   experiment
   orchestrator
   launchers
   api/smartsim_api

.. toctree::
   :maxdepth: 2
   :caption: SmartRedis

   smartredis
   sr_integration
   sr_python_walkthrough
   sr_cpp_walkthrough
   sr_fortran_walkthrough
   sr_data_structures
   sr_dataset_conversions
   sr_runtime
   api/smartredis_api

.. toctree::
   :maxdepth: 2
   :caption: Reference

   changelog
   code_of_conduct
   developer
   testing


Indices and tables
==================

* :ref:`search`
